[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lib-ml"
description = "Text preprocessing library for REMLA sentiment assignments"
readme = "README.md"
requires-python = ">=3.9"
dynamic = ["version"]

dependencies = [
    "scikit-learn>=1.3",
    "nltk>=3.8",
    "joblib>=1.3",
]

[project.optional-dependencies]
dev = ["pytest", "ruff"]

